# RAG

./: .pre-commit-config.yaml  README.md  app.py  build.sh  pyproject.toml  requirements.txt
.github/workflows/: rag_ci.yml
docs/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
rag_demo/: data_loader.py  embedder.py  generator.py  interface.py  retriever.py
