[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Kabeer Akande <46060542+kbakande@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rag_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^4.0.1"
transformers = "^4.50.3"
faiss-cpu = "^1.10.0"
gradio = "^5.23.1"


[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag_demo = "rag_demo.app:ui.launch"
